--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiayi(Eris) Zhang"
   avatar           : "jiayi-zhang.jpg"
-  bio              : "Senior Undergrad at the University of Toronto"
+  bio              : "Undergrad @UofT"
   location         : "Toronto, ON"
   employer         :
   pubmed           :
