--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jiayi Eris Zhang | 张嘉懿"
+title                    : "Jiayi Eris Zhang"
 title_separator          : "-"
 name                     : &name "Jiayi Eris Zhang"
 description              : &description "personal description"
