--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,8 @@ analytics:
 author:
   name             : "Jiayi(Eris) Zhang"
   avatar           : "jiayi-zhang.jpg"
-  bio              : "Undergrad @UofT"
+  bio              : "Undergrad @UofT <br/>
+                      she/her/hers"
   location         : "Toronto, ON"
   employer         :
   pubmed           :
