--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jiayi Eris Zhang"
 title_separator          : "-"
 name                     : &name "Jiayi Eris Zhang"
-description              : &description "personal description"
+description              : &description "Personal Page"
 url                      : https://ErisZhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ErisZhang/ErisZhang.github.io"
