--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-  #   url: /cv/
+  - title: "CV"
+    url: /files/Jiayi-Eris-Zhang-CV.pdf
     
   # - title: "Guide"
   #   url: /markdown/
