--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "Toronto, Canada"
-title                    : "Jiayi Eris Zhang"
+locale                   : "Nanjing, China"
+title                    : "Tianyue Li"
 title_separator          : "-"
-name                     : &name "Jiayi Eris Zhang"
-description              : &description "Homepage of Jiayi Eris Zhang, University of Toronto"
-url                      : https://ErisZhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Tianyue Li"
+description              : &description "Homepage of Tianyue Li, University of Nanjing"
+url                      : https://tobeyleonard.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ErisZhang/ErisZhang.github.io"
+repository               : "tobeyleonardtobeyleonard.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
