--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ og_image                 :  # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links: "https://twitter.com/TianyueLi8" # An array of links to social media profiles
 
 
 # Analytics
