--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ og_image                 :  # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: "https://twitter.com/TianyueLi8" # An array of links to social media profiles
+  links:  # An array of links to social media profiles
 
 
 # Analytics
@@ -110,7 +110,7 @@ author:
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "ErisZhang0326"
+  twitter          : "TianyueLi8"
   vine             :
   weibo            :
   xing             :
