--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tianyue Li"
-  avatar           : "tianyue.jpg"
+  avatar           : "tianyue.png"
   bio              : "Undergrad @UofT <br/>
                       Ph. D candidate @Nanjing Univ"
   location         : "Nanjing, ON"
