--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/tianyue-li-861b75216/"
+  linkedin         : "/tianyue-li-861b75216/"
   orcid            :
   pinterest        :
   soundcloud       :
