--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              :
 #   "Undergrad @UofT <br/>
                       "Ph. D candidate @Nanjing Univ"
-  location         : "Nanjing, ON"
+  location         : "Nanjing, China"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=9E7qtmMAAAAJ&hl=en"
