--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "tobeyleonard"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
