--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   impactstory      :
   lastfm           :
   linkedin         : "/tianyue-li-861b75216/"
-  orcid            :
+  orcid            : "https://orcid.org/0000-0001-7682-7483"
   pinterest        :
   soundcloud       :
   stackoverflow    :
