--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "tianyue.png"
   bio              :
 #   "Undergrad @UofT <br/>
-                      "Ph. D candidate @Nanjing Univ." <br/>
+                      "Ph. D candidate @NJU"
   location         : "Nanjing, China"
   employer         :
   pubmed           :
