--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tianyue Li"
-  avatar           : "tianyue.png"
+  avatar           : "Avater_Tianyueli.jpg"
   bio              :
 #   "Undergrad @UofT <br/>
                       "Ph. D candidate @NJU <br/> "
