--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=9E7qtmMAAAAJ&hl=en"
-  email            :
+  email            : leos4a@163.com
   researchgate     :
   uri              :
   bitbucket        :
