--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Tianyue Li"
+  name             : "Tianyue Li <br/> (Tobey Leonard)"
   avatar           : "touxiang.jpg"
   bio              :
 #   "Undergrad @UofT <br/>
