--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "touxiang.jpg"
   bio              :
 #   "Undergrad @UofT <br/>
-                      "Tobey Leonard <br/> Ph. D candidate @NJU "
+                      "Tobey Leonard <br/> Ph. D @NJU "
   location         : "Gulou, NJ"
   employer         :
   pubmed           :
