--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tianyue Li <br/> "
-  avatar           : "touxiang.jpg"
+  avatar           : "grassBKG.jpg"
   bio              :
 #   "Undergrad @UofT <br/>
                       "Tobey Leonard <br/> Research fellow@HKUST "
